# micromouse

./: Dockerfile  README.md  main.py  pyproject.toml  solve.py
.github/workflows/: docker.yml
scripts/: astar.py  manual.py  min_wallfollower.py  minimal.py  optimal_solver.py  visual_wallfollower.py  wall_follower.py
src/micromouse/: __init__.py  api.py  cli.py  maze.py  state.py
