[project]
name = "micromouse"
version = "0.1.0"
description = "A simple micromouse maze navigation API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "fastapi>=0.124.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "urllib3>=2.6.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
micromouse = "micromouse.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
